<resources>
    <string name="app_name">G-TEC</string>
    <string name="lets_sign_you_in">Let’s Sign You In</string>
    <string name="username_or_email">Username or E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sıgn In</string>
    <string name="forget_with_question_mark">Forget?</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_username_or_email">Invalid Username or Email</string>
    <string name="invalid_email">Invalid Email please add valid one</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="please">Please</string>
    <string name="wait">Wait</string>
    <string name="loading">loading</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="offers">Offers</string>
    <string name="order">Order</string>
    <string name="title_activity_homepage">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_shop">Shop</string>
    <string name="title_my_account">My Account</string>
    <string name="title_offers">Offers</string>
    <string name="search_in_products">Search in products</string>
    <string name="top_categories">Top Categories</string>
    <string name="electronics">Electronics</string>
    <string name="home_appliance">Home Appliance</string>
    <string name="see_all_sample">See All</string>
    <string name="sample_user">User</string>
    <string name="sample_user_email">user@gtec.com</string>
    <string name="address_sample">El Tagamoa</string>
    <string name="payment">Payment</string>
    <string name="manage_address">Manage Address</string>
    <string name="your_name">Your Name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="logout">Log Out</string>
    <string name="title_orders">Orders</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="account_created_success">User Account Created</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_new_account_to_continue">Create an account to continued</string>
    <string name="country_mandatory">Country*</string>
    <string name="city_mandatory">City*</string>
    <string name="forget_password">Forget password</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="send">Send</string>
    <string name="empty_email">Email is Empty</string>
    <string name="reset_password_message_success">Reset password is sent to your email successfully</string>
    <string name="reset_password_message_failure">Can not send reset password to your email please try again later</string>
</resources>