<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_two"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:src="@mipmap/login_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@mipmap/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:text="@string/lets_sign_you_in"
        android:textColor="@color/black_two"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_light"
        android:lineSpacingExtra="8sp"
        android:text="@string/username_or_email"
        android:textColor="@color/warm_grey"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etUsernameOrEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@mipmap/user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username_or_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@color/black_three"
        android:textColorHint="@color/cool_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_light"
        android:lineSpacingExtra="8sp"
        android:text="@string/password"
        android:textColor="@color/warm_grey"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameOrEmail" />

    <RelativeLayout
        android:id="@+id/relativePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black_three"
            android:textColorHint="@color/cool_grey"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/forget_with_question_mark"
            android:textColor="@color/cerulean"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/login_bg"
        android:fontFamily="@font/poppins_light"
        android:lineSpacingExtra="9sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white_two"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativePassword" />

    <TextView
        android:id="@+id/signUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/dont_have_account"
        android:textColor="@color/black_four"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/sign_up"
        android:layout_marginStart="5dp"
        android:textColor="@color/cerulean"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/signUp1"
        app:layout_constraintStart_toEndOf="@+id/signUp1" />

</androidx.constraintlayout.widget.ConstraintLayout>